new apple touch icon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="canonical" href="https://drpalazzolo.it">
 
     <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" href="https://drpalazzolo.it/src/Roberto.png">
+    <link rel="apple-touch-icon" href="https://drpalazzolo.it/src/logo.png">
 
     <!-- Open Graph / Facebook / WhatsApp Preview -->
     <meta property="og:type" content="website">
