--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:title" content="Dott. Roberto Palazzolo - Endocrinologia">
     <meta property="og:description"
         content="Endocrinologo in formazione esperto in diabete, tiroide e metabolismo. Prenota la tua visita o contattami.">
-    <meta property="og:image" content="https://drpalazzolo.it/src/robert.png">
+    <meta property="og:image" content="https://drpalazzolo.it/src/Roberto.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -43,7 +43,7 @@
       "@context": "https://schema.org",
       "@type": "Physician",
       "name": "Roberto Palazzolo",
-      "image": "https://drpalazzolo.it/src/robert.png",
+      "image": "https://drpalazzolo.it/src/Roberto.png",
       "logo": "https://drpalazzolo.it/src/logo.png",
       "description": "Medico in formazione in Endocrinologia e specialista in cure per diabete, obesità e metabolismo, problemi alla tiroide.",
       "url": "https://drpalazzolo.it",
