--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="canonical" href="https://drpalazzolo.it">
 
     <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" href="https://drpalazzolo.it/src/logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 
     <!-- Open Graph / Facebook / WhatsApp Preview -->
     <meta property="og:type" content="website">
@@ -32,9 +32,10 @@
     <meta property="twitter:image" content="https://drpalazzolo.it/src/Roberto.png">
 
     <!-- Favicon -->
-    <link rel="icon" href="/favicon.png" sizes="512x512" type="image/png">
-    <link rel="icon" href="/favicon.png" sizes="192x192" type="image/png">
-    <link rel="icon" href="/favicon.png" sizes="48x48" type="image/png">
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="manifest" href="/site.webmanifest" />
 
 
     <!-- Structured Data (JSON-LD) for SEO -->
