modifiche contenuto roberto

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
             </div>
             <h1 class="profile-name">Dott. Roberto Palazzolo</h1>
             <p class="profile-title">Endocrinologia</p>
-            <p class="profile-bio">Medico in formazione specialistica in Endocrinologia in cure per diabete, obesità e
-                metabolismo, problemi alla tiroide.</p>
+            <p class="profile-bio">Medico in formazione specialistica in Endocrinologia e Malattie del Metabolismo.
+                Esperto in Diabete, Obesità, Tiroide, Andrologia, Sarcopenia</p>
         </header>
 
         <!-- SEO Content Section: Hidden from primary view but accessible -->
@@ -100,20 +100,17 @@
                 </summary>
                 <div class="details-content">
                     <p>
-                        Il <strong>Dott. Roberto Palazzolo</strong> è un medico dedicato alla cura e al benessere dei
-                        propri pazienti, attualmente in
-                        formazione specialistica focalizzata sulle disfunzioni del sistema endocrino.
-                        L'obiettivo principale è fornire un approccio medico basato sull'ascolto e sull'analisi
-                        approfondita,
-                        per costruire percorsi terapeutici su misura.
+                        Il <strong>Dott. Roberto Palazzolo</strong> è un medico chirurgo abilitato, prossimo ad essere
+                        specialista nella cura delle patologie endocrine. Il suo approccio si basa sul coniugare
+                        l'ascolto del paziente alle più recenti evidenze scientifiche. Da un'attenta anamnesi infatti,
+                        è possibile cogliere quei sintomi e quelle sfumature cliniche che possono fare la differenza nel
+                        giusto approccio terapeutico.
                     </p>
                     <p>
                         L'endocrinologia richiede un approccio olistico: ogni sintomo può essere la spia di un
-                        disequilibrio
-                        più complesso. Grazie a un costante aggiornamento scientifico e all'attenzione per le
-                        innovazioni
-                        terapeutiche, il Dott. Palazzolo offre trattamenti all'avanguardia per ristabilire l'equilibrio
-                        ormonale e metabolico.
+                        disequilibrio più complesso. Grazie a un costante aggiornamento scientifico e all'attenzione per
+                        le innovazioni terapeutiche, il Dott. Palazzolo offre trattamenti all'avanguardia per
+                        ristabilire l'equilibrio ormonale e metabolico.
                     </p>
                 </div>
             </details>
@@ -133,15 +130,16 @@
                     </p>
                     <ul>
                         <li>
-                            <strong>Diabete Mellito (Tipo 1, Tipo 2 e Gestazionale):</strong> Pianificazione di diete
-                            personalizzate,
-                            terapie farmacologiche innovative e gestione delle complicanze. Supporto per il diabete in
-                            gravidanza.
+                            <strong>Diabete Mellito (Tipo 1, Tipo 2 e Gestazionale):</strong> Gestione, installazione e
+                            modifica dei parametri dei microinfusori per il diabete tipo 1. Terapie farmacologiche
+                            innovative e obiettivo della de-insulinizzazione per il diabete tipo 2. Trattamento e
+                            monitoraggio del diabete gestazionale.
                         </li>
                         <li>
                             <strong>Patologie della Tiroide:</strong> Diagnosi e cura di ipotiroidismo, ipertiroidismo,
-                            tiroiditi autoimmuni (Hashimoto, Graves), e gestione dei noduli tiroidei con indicazioni
-                            ecografiche.
+                            tiroiditi autoimmuni (Hashimoto, Morbo di Graves), e gestione dei noduli tiroidei con
+                            Ecografia della tiroide. Trattamento e gestione dell'ipotiroidismo subclinico e
+                            ipertiroidismo subclinico.
                         </li>
                         <li>
                             <strong>Obesità e Sindrome Metabolica:</strong> Percorsi strutturati di calo ponderale che
