--- a/index.html
+++ b/index.html
@@ -143,18 +143,31 @@
                         </li>
                         <li>
                             <strong>Obesità e Sindrome Metabolica:</strong> Percorsi strutturati di calo ponderale che
-                            integrano nutrizione e, quando necessario, supporto farmacologico per combattere
-                            l'insulino-resistenza.
+                            integrano nutrizione, supporto farmacologico e piano personalizzato di attività fisica.
+                            Insulino resistenza ed obesità sono patologie croniche multifattoriali che richiedono un
+                            approccio a 360°, che solo un approccio olistico può risolvere sul lungo termine.
+
                         </li>
                         <li>
-                            <strong>Disturbi Ormonali Femminili e Maschili:</strong> Trattamento della sindrome
-                            dell'ovaio
+                            <strong>Visita andrologica:</strong> Ecografia testicolare. Trattamento di: disfunzione
+                            erettile, calo della libido,ipogonadismo, infertilità maschile,valutazione ed
+                            interpretazione spermiogramma, problemi delle basse vie urinarie (LUTS), ipertrofia
+                            prostatica benigna, prostatite cronica, dolore pelvico maschile, algie scrotali. Diagnosi ed
+                            inquadramento del varicocele.
+                        </li>
+                        <li>
+                            <strong>Disturbi Ormonali Femminili:</strong> Trattamento della sindrome dell'ovaio
                             policistico (PCOS), irregolarità mestruali, menopausa, ipogonadismo e disturbi della sfera
-                            sessuale.
+                            sessuale, desiderio sessuale ipoattivo, iperandrogenismo, irsutismo, ipertricosi.
                         </li>
                         <li>
                             <strong>Osteoporosi e Metabolismo Osseo:</strong> Valutazione del rischio di frattura e
-                            terapie per rafforzare la densità ossea, prevenendo l'osteoporosi.
+                            terapie per rafforzare la densità ossea, prevenendo o curando l'osteoporosi e l'osteopenia.
+                        </li>
+                        <li>
+                            <strong>Endocrinologia generale:</strong> adenomi ipofisari; Prolattinomi; valutazione del
+                            deficit di crescita nel bambino; ipercortisolismo o Cushing,valutazione adenoma surrenalico,
+                            ipocortisolismo o Addison,panipopituitarismo.
                         </li>
                     </ul>
                 </div>
