--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
 
-            <a href="https://www.google.com/search?q=Dott.+Roberto+Palazzolo+Endocrinologia" target="_blank"
-                rel="noopener noreferrer" class="link-card" title="Leggi le recensioni su Google">
+            <a href="https://g.page/r/CdexnB2V86kZEAE/review" target="_blank" rel="noopener noreferrer"
+                class="link-card" title="Leggi le recensioni su Google">
                 <div class="icon-box"><img src="https://www.google.com/favicon.ico" alt="Google" class="google-icon">
                 </div>
                 <span class="link-text">Dicono di me</span>
