--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:title" content="Dott. Roberto Palazzolo - Endocrinologia">
     <meta property="og:description"
         content="Endocrinologo in formazione esperto in diabete, tiroide e metabolismo. Prenota la tua visita o contattami.">
-    <meta property="og:image" content="https://drpalazzolo.it/src/Roberto.png">
+    <meta property="og:image" content="https://drpalazzolo.it/src/logo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -29,7 +29,7 @@
     <meta property="twitter:title" content="Dott. Roberto Palazzolo - Endocrinologia">
     <meta property="twitter:description"
         content="Endocrinologo in formazione esperto in diabete, tiroide e metabolismo. Prenota la tua visita.">
-    <meta property="twitter:image" content="https://drpalazzolo.it/src/Roberto.png">
+    <meta property="twitter:image" content="https://drpalazzolo.it/src/logo.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
