--- a/index.html
+++ b/index.html
@@ -112,6 +112,25 @@
                         le innovazioni terapeutiche, il Dott. Palazzolo offre trattamenti all'avanguardia per
                         ristabilire l'equilibrio ormonale e metabolico.
                     </p>
+
+                    <!-- Powerlifting & Physical Exercise Section -->
+                    <details class="nested-details">
+                        <summary>
+                            <h3>Atleta di Powerlifting e Prescrizione dell'Esercizio Fisico</h3>
+                            <i class="ph ph-caret-down arrow-icon"></i>
+                        </summary>
+                        <div class="details-content">
+                            <div class="powerlifting-content">
+                                <img src="./src/powerlifting.png" alt="Dott. Roberto Palazzolo - Atleta di Powerlifting" class="powerlifting-image">
+                                <p>
+                                    Il <strong>Dott. Roberto Palazzolo</strong> è anche un atleta agonista di powerlifting. 
+                                    La sua esperienza quinquennale nell'allenamento contro resistenza gli fornisce preziosi 
+                                    strumenti per la prescrizione personalizzata dell'esercizio fisico come elemento terapeutico.
+                                </p>
+                                </p>
+                            </div>
+                        </div>
+                    </details>
                 </div>
             </details>
 
