--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       "@context": "https://schema.org",
       "@type": "Physician",
       "name": "Roberto Palazzolo",
-      "image": "https://drpalazzolo.it/src/Roberto.png",
+      "image": "https://drpalazzolo.it/src/roberto.jpeg",
       "logo": "https://drpalazzolo.it/src/logo.png",
       "description": "Medico in formazione in Endocrinologia e specialista in cure per diabete, obesità e metabolismo, problemi alla tiroide.",
       "url": "https://drpalazzolo.it",
@@ -81,7 +81,7 @@
                 <img src="./src/logo.png" alt="Logo Dott. Roberto Palazzolo" class="branding-logo">
                 <div class="profile-image-container">
                     <!-- Placeholder for Doctor's Image -->
-                    <img src="./src/Roberto.png" alt="Foto Profilo" class="profile-image">
+                    <img src="./src/roberto.jpeg" alt="Foto Profilo" class="profile-image">
                 </div>
             </div>
             <h1 class="profile-name">Dott. Roberto Palazzolo</h1>
@@ -121,11 +121,15 @@
                         </summary>
                         <div class="details-content">
                             <div class="powerlifting-content">
-                                <img src="./src/powerlifting.png" alt="Dott. Roberto Palazzolo - Atleta di Powerlifting" class="powerlifting-image">
+                                <img src="./src/powerlifting.png" alt="Dott. Roberto Palazzolo - Atleta di Powerlifting"
+                                    class="powerlifting-image">
                                 <p>
-                                    Il <strong>Dott. Roberto Palazzolo</strong> è anche un atleta agonista di powerlifting. 
-                                    La sua esperienza quinquennale nell'allenamento contro resistenza gli fornisce preziosi 
-                                    strumenti per la prescrizione personalizzata dell'esercizio fisico come elemento terapeutico.
+                                    Il <strong>Dott. Roberto Palazzolo</strong> è anche un atleta agonista di
+                                    powerlifting.
+                                    La sua esperienza quinquennale nell'allenamento contro resistenza gli fornisce
+                                    preziosi
+                                    strumenti per la prescrizione personalizzata dell'esercizio fisico come elemento
+                                    terapeutico.
                                 </p>
                                 </p>
                             </div>
