--- a/index.html
+++ b/index.html
@@ -230,6 +230,15 @@
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
 
+            <!-- Primary Action (Booking) - WhatsApp Booking -->
+            <a href="https://wa.me/393513156894?text=Salve%2C%20vorrei%20prenotare%20una%20ecografia." target="_blank"
+                rel="noopener noreferrer" class="link-card"
+                title="Prenota una ecografia specialistica con il Dott. Palazzolo su WhatsApp">
+                <div class="icon-box"><i class="ph ph-whatsapp-logo"></i></div>
+                <span class="link-text">Prenota una Ecografia</span>
+                <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
+            </a>
+
             <!-- Location Link -->
             <a href="https://www.google.com/maps/search/?api=1&query=Via+Alcide+de+Gasperi+165%2C+Catania"
                 target="_blank" rel="noopener noreferrer" class="link-card"
