--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 rel="noopener noreferrer" class="link-card"
                 title="Prenota una ecografia specialistica con il Dott. Palazzolo su WhatsApp">
                 <div class="icon-box"><i class="ph ph-whatsapp-logo"></i></div>
-                <span class="link-text">Prenota una Ecografia</span>
+                <span class="link-text">Prenota un'Ecografia</span>
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
 
