--- a/index.html
+++ b/index.html
@@ -221,23 +221,51 @@
         <!-- Links Section -->
         <main class="links-container">
 
-            <!-- Primary Action (Booking) - WhatsApp Booking -->
-            <a href="https://wa.me/393513156894?text=Salve%2C%20vorrei%20prenotare%20una%20visita." target="_blank"
-                rel="noopener noreferrer" class="link-card featured"
-                title="Prenota una visita specialistica con il Dott. Palazzolo su WhatsApp">
-                <div class="icon-box"><i class="ph ph-whatsapp-logo"></i></div>
-                <span class="link-text">Prenota una Visita</span>
-                <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
-            </a>
+            <!-- Primary Action (Booking) - WhatsApp Booking Group -->
+            <details class="whatsapp-group">
+                <summary class="link-card featured" title="Opzioni di prenotazione su WhatsApp">
+                    <div class="icon-box"><i class="ph ph-whatsapp-logo"></i></div>
+                    <span class="link-text">Prenota su WhatsApp</span>
+                    <div class="arrow-box"><i class="ph ph-caret-down"></i></div>
+                </summary>
+                <div class="whatsapp-options">
+                    <!-- Visita -->
+                    <a href="https://wa.me/393513156894?text=Salve%2C%20vorrei%20prenotare%20una%20visita."
+                        target="_blank" rel="noopener noreferrer" class="link-card sub-link"
+                        title="Prenota una visita specialistica">
+                        <div class="icon-box"><i class="ph ph-stethoscope"></i></div>
+                        <span class="link-text">Visita Specialistica</span>
+                        <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
+                    </a>
 
-            <!-- Primary Action (Booking) - WhatsApp Booking -->
-            <a href="https://wa.me/393513156894?text=Salve%2C%20vorrei%20prenotare%20una%20ecografia." target="_blank"
-                rel="noopener noreferrer" class="link-card"
-                title="Prenota una ecografia specialistica con il Dott. Palazzolo su WhatsApp">
-                <div class="icon-box"><i class="ph ph-whatsapp-logo"></i></div>
-                <span class="link-text">Prenota un'Ecografia</span>
-                <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
-            </a>
+                    <!-- Ecografia -->
+                    <a href="https://wa.me/393513156894?text=Salve%2C%20vorrei%20prenotare%20una%20ecografia."
+                        target="_blank" rel="noopener noreferrer" class="link-card sub-link"
+                        title="Prenota una ecografia specialistica">
+                        <div class="icon-box"><i class="ph ph-waves"></i></div>
+                        <span class="link-text">Ecografia</span>
+                        <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
+                    </a>
+
+                    <!-- Consulenza Online -->
+                    <a href="https://wa.me/393513156894?text=Salve%2C%20vorrei%20prenotare%20una%20consulenza%20online."
+                        target="_blank" rel="noopener noreferrer" class="link-card sub-link"
+                        title="Prenota una consulenza online">
+                        <div class="icon-box"><i class="ph ph-video-camera"></i></div>
+                        <span class="link-text">Consulenza Online</span>
+                        <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
+                    </a>
+
+                    <!-- Domiciliare -->
+                    <a href="https://wa.me/393513156894?text=Salve%2C%20vorrei%20prenotare%20una%20visita%20domiciliare."
+                        target="_blank" rel="noopener noreferrer" class="link-card sub-link"
+                        title="Prenota una visita domiciliare">
+                        <div class="icon-box"><i class="ph ph-house"></i></div>
+                        <span class="link-text">Visita Domiciliare</span>
+                        <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
+                    </a>
+                </div>
+            </details>
 
             <!-- Location Link -->
             <a href="https://www.google.com/maps/search/?api=1&query=Via+Alcide+de+Gasperi+165%2C+Catania"
@@ -251,6 +279,13 @@
             <a href="tel:+393513156894" class="link-card" title="Chiama lo studio del Dott. Palazzolo">
                 <div class="icon-box"><i class="ph ph-phone"></i></div>
                 <span class="link-text">Chiama lo Studio</span>
+                <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
+            </a>
+
+            <a href="https://scholar.google.com/citations?user=your_id" target="_blank" rel="noopener noreferrer"
+                class="link-card" title="Vedi le pubblicazioni universitarie">
+                <div class="icon-box"><i class="ph ph-graduation-cap"></i></div>
+                <span class="link-text">Pubblicazioni Universitarie</span>
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
 
