update link pubmed and reviews

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
 
-            <a href="https://scholar.google.com/citations?user=your_id" target="_blank" rel="noopener noreferrer"
+            <a href="https://sciprofiles.com/profile/Robertopalazzolo" target="_blank" rel="noopener noreferrer"
                 class="link-card" title="Vedi le pubblicazioni universitarie">
                 <div class="icon-box"><i class="ph ph-graduation-cap"></i></div>
                 <span class="link-text">Pubblicazioni Universitarie</span>
@@ -295,8 +295,8 @@
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
 
-            <a href="https://g.page/r/CdexnB2V86kZEAE/review" target="_blank" rel="noopener noreferrer"
-                class="link-card" title="Leggi le recensioni su Google">
+            <a href="https://www.google.com/search?hl=it&sxsrf=ANbL-n7HyNyPiliRqL48IokyQ5IXVt3Xcw:1770843390067&si=AL3DRZEsmMGCryMMFSHJ3StBhOdZ2-6yYkXd_doETEE1OR-qOcfoleo5qOsi8pRlzJ_PI-Sspswf-8cteFFaHyV9mOc4OU9W090C99fxDt7piG3cqV5jwoklkfFU3ZAkbKAK-ICbqQnlNoETmYYTzOJwYilNq52fU6_cD_MQbSBwPEueGk_JBNwO8reclGidh5nqjpsvuGSCXEEDRWOWKkVfjQnQK4_GV8J6puUl84xtKCbc8vltaDHtk8E-c_LFP5LfewMas1SAK__StBKYvaMohukTHbjG-Q%3D%3D&q=Dr.+Roberto+Palazzolo+-+Medico+Chirurgo+-+Medico+in+formazione+specialistica+in+Endocrinologia+e+Malattie+del+Metabolismo+Recensioni"
+                target="_blank" rel="noopener noreferrer" class="link-card" title="Leggi le recensioni su Google">
                 <div class="icon-box"><img src="https://www.google.com/favicon.ico" alt="Google" class="google-icon">
                 </div>
                 <span class="link-text">Dicono di me</span>
